--- a/student_intervention/student_intervention.ipynb
+++ b/student_intervention/student_intervention.ipynb
@@ -349,7 +349,8 @@
     "    - The model is better than most models in dealing with noisy data as it determines a classification based on k nearby points as opposed to line through the data.  It is also more accurate when the data set is large as there are more points to group from.\n",
     "    - The model has a few parameters that largely affect the effectiveness of the model.  One has to determine the parameter, k, to determine how many points to look at nearby.  The user also has to determine a distance formula to find the nearest points.\n",
     "    - Given what I know about the data, this model seems great because it has large amounts of data to classify from considering there are only two categories. It also is a great tool for classification as it is determining the closeness to othe\n",
-    "- Support Vector Machines are the worst thing ever.\n",
+    "- Support Vector Machines\n",
+    "    - Support Vector Machines are utilized in IBM research. http://domino.watson.ibm.com/library/CyberDig.nsf/1e4115aea78b6e7c85256b360066f0d4/f2faf0f788019701852574e1005095e3?OpenDocument\n",
     "- Decision Trees\n"
    ]
   },
