--- a/student_intervention/student_intervention.ipynb
+++ b/student_intervention/student_intervention.ipynb
@@ -350,8 +350,15 @@
     "    - The model has a few parameters that largely affect the effectiveness of the model.  One has to determine the parameter, k, to determine how many points to look at nearby.  The user also has to determine a distance formula to find the nearest points.\n",
     "    - Given what I know about the data, this model seems great because it has large amounts of data to classify from considering there are only two categories. It also is a great tool for classification as it is determining the closeness to othe\n",
     "- Support Vector Machines\n",
-    "    - Support Vector Machines are utilized in IBM research. http://domino.watson.ibm.com/library/CyberDig.nsf/1e4115aea78b6e7c85256b360066f0d4/f2faf0f788019701852574e1005095e3?OpenDocument\n",
-    "- Decision Trees\n"
+    "    - The reference lists several applications of SVMs.  One application is to determine seismic liquefaction potential based on actual standard penetration test and cone penetration test values.  http://www.clopinet.com/SVM.applications.html\n",
+    "    - The model is good at classifying due to the use of kernels and being accurate.  Therefore, any complicated datasets can be split without any additional transformations. \n",
+    "    - The model has issues with dealing with larger data sets as the required processing is much more extensive.\n",
+    "    - Given what I know about the data, this model will work well because its a classification problem and does not have a large data set.\n",
+    "- Decision Trees\n",
+    "    - The book referenced in the link provides details about applying decision trees to enable smart home's decision making. http://link.springer.com/chapter/10.1007%2F11788485_8\n",
+    "    - The model performs well for less complex data sets as the model is cheap to compute in that situation.\n",
+    "    - The model loses its cheapness to compute once the data sets become very larger as the model is simplistic and does not simplify complex data.\n",
+    "    - Given what I know about the data, the model will work well because of the simplicity of the features in the data.  Decision trees also have proven to be useful for classification problems.\n"
    ]
   },
   {
@@ -368,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
