--- a/student_intervention/student_intervention.ipynb
+++ b/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -451,7 +451,7 @@
       "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.8591.\n",
-      "Made predictions in 0.0000 seconds.\n",
+      "Made predictions in 0.0020 seconds.\n",
       "F1 score for test set: 0.7838.\n"
      ]
     }
@@ -557,7 +557,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "- In the case of this particular data set, the support vector machine is chosen as the best model.  The particular model learns from the data set by splitting similar data apart to determine what groups each of the data points belong to.  The model then takes an input and bases what the prediction is on whether the input is within a certain group of data points.  As a result, the model determines which students require intervention with the highest accuracy."
    ]
   },
   {
@@ -578,28 +579,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Made predictions in 0.0030 seconds.\n",
+      "Tuned model has a training F1 score of 0.8158.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7662.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import 'GridSearchCV' and 'make_scorer'\n",
-    "\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.metrics import make_scorer\n",
     "# TODO: Create the parameters list you wish to tune\n",
-    "parameters = None\n",
+    "parameters = {'kernel' : ['rbf', 'sigmoid', 'linear', 'poly'], 'C' : [0.5, 1.0, 1.5, 5.0] }\n",
     "\n",
     "# TODO: Initialize the classifier\n",
-    "clf = None\n",
+    "clf = svm.SVC()\n",
     "\n",
     "# TODO: Make an f1 scoring function using 'make_scorer' \n",
-    "f1_scorer = None\n",
+    "f1_scorer = make_scorer(f1_score, pos_label = 'yes')\n",
     "\n",
     "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
-    "grid_obj = None\n",
+    "grid_obj = GridSearchCV(clf, parameters, scoring = f1_scorer)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_obj = None\n",
+    "grid_obj = grid_obj.fit(X_train_100, y_train_100)\n",
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
@@ -621,7 +634,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: **\n",
+    "- The final model's F1 score for training and testing is 0.8150 and 0.7662 respectively. Compared to the untuned model, the tuned model actually came out worse as the untuned model had a testing score of 0.7838."
    ]
   },
   {
