--- a/student_intervention/student_intervention.ipynb
+++ b/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -99,7 +99,7 @@
       "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
-      "Graduation rate of the class: 0.67%\n"
+      "Graduation rate of the class: 67.09%\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
     "n_failed = student_data['passed'].value_counts()[1]\n",
     "\n",
     "# TODO: Calculate graduation rate\n",
-    "grad_rate = n_passed/float(n_passed+n_failed)\n",
+    "grad_rate = n_passed/float(n_passed+n_failed)*100\n",
     "\n",
     "# Print the results\n",
     "print \"Total number of students: {}\".format(n_students)\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +410,7 @@
     "    ''' Train and predict using a classifer based on F1 score. '''\n",
     "    \n",
     "    # Indicate the classifier and the training set size\n",
-    "    print \"Training a {} using a training set size of {}. . .\".format(clf.__class__.__name__, len(X_train))\n",
+    "    #print \"Training a {} using a training set size of {}. . .\".format(clf.__class__.__name__, len(X_train))\n",
     "    \n",
     "    # Train the classifier\n",
     "    train_classifier(clf, X_train, y_train)\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -447,12 +447,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training a SVC using a training set size of 100. . .\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for training set: 0.7972.\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for test set: 0.7068.\n",
+      "None\n",
       "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0060 seconds.\n",
+      "F1 score for training set: 0.8571.\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for test set: 0.7121.\n",
+      "None\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0120 seconds.\n",
+      "F1 score for training set: 0.8722.\n",
+      "Made predictions in 0.0060 seconds.\n",
+      "F1 score for test set: 0.7482.\n",
+      "None\n",
+      "Trained model in 0.0030 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 0.8591.\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "F1 score for test set: 0.7838.\n"
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7838.\n",
+      "None\n",
+      "Trained model in 0.0130 seconds\n",
+      "Made predictions in 0.0110 seconds.\n",
+      "F1 score for training set: 0.8693.\n",
+      "Made predictions in 0.0080 seconds.\n",
+      "F1 score for test set: 0.7755.\n",
+      "None\n",
+      "Trained model in 0.0180 seconds\n",
+      "Made predictions in 0.0080 seconds.\n",
+      "F1 score for training set: 0.8692.\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for test set: 0.7586.\n",
+      "None\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.6942.\n",
+      "None\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7132.\n",
+      "None\n",
+      "Trained model in 0.0040 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7167.\n",
+      "None\n"
      ]
     }
    ],
@@ -470,18 +518,24 @@
     "clf_B = svm.SVC(random_state = 0)\n",
     "clf_C = tree.DecisionTreeClassifier(random_state = 0)\n",
     "\n",
+    "clf_all = [clf_A, clf_B, clf_C]\n",
+    "\n",
     "# TODO: Set up the training set sizes\n",
-    "X_train_100 = X_train[:100]\n",
-    "y_train_100 = y_train[:100]\n",
+    "#X_train_100 = X_train[:100]\n",
+    "#y_train_100 = y_train[:100]\n",
     "\n",
-    "X_train_200 = X_train[:200]\n",
-    "y_train_200 = y_train[:200]\n",
+    "#X_train_200 = X_train[:200]\n",
+    "#y_train_200 = y_train[:200]\n",
     "\n",
-    "X_train_300 = X_train\n",
-    "y_train_300 = y_train\n",
+    "#X_train_300 = X_train\n",
+    "#y_train_300 = y_train\n",
+    "\n",
+    "n_train = [100, 200, 300]\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)"
+    "for clf in clf_all:\n",
+    "    for n in n_train:\n",
+    "        print train_predict(clf, X_train[:n], y_train[:n], X_test, y_test)"
    ]
   },
   {
@@ -558,7 +612,7 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "- In the case of this particular data set, the support vector machine is chosen as the best model.  The particular model learns from the data set by splitting similar data apart to determine what groups each of the data points belong to.  The model then takes an input and bases what the prediction is on whether the input is within a certain group of data points.  As a result, the model determines which students require intervention with the highest accuracy."
+    "- Take into consideration a person who sells two types of ice creams: chocolate and vanilla.  His/her data takes into consideration two attributes of people who buy either chocolate and vanilla.  These two attributes are age and height.  Strangely enough, the data describes that people who were middle-aged and medium height love chocolate. Meanwhile, the elderly or children of all kinds of heights love vanilla.  With this kind of data, there is no way to defined some boundary to group those that love vanilla or chocolate.  An SVM will seek to define a boundary by introducting a new attribute to determine the similarity between people who love chocolate or vanilla..  In this higher dimension that uses this similarity attribute, people that love chocolate will most likely be similar to others that love chocolate and vice versa. As a result, the SVM creates a clear boundary that can be used to determine if someone of a particular height and age most likely enjoys chocolate or vanilla.   "
    ]
   },
   {
@@ -579,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -588,10 +642,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Made predictions in 0.0090 seconds.\n",
+      "Tuned model has a training F1 score of 0.8976.\n",
       "Made predictions in 0.0030 seconds.\n",
-      "Tuned model has a training F1 score of 0.8158.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7662.\n"
+      "Tuned model has a testing F1 score of 0.7552.\n",
+      "SVC(C=1.5, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape=None, degree=3, gamma='auto', kernel='rbf',\n",
+      "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+      "  tol=0.001, verbose=False)\n"
      ]
     }
    ],
@@ -612,14 +670,15 @@
     "grid_obj = GridSearchCV(clf, parameters, scoring = f1_scorer)\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_obj = grid_obj.fit(X_train_100, y_train_100)\n",
+    "grid_obj = grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# Get the estimator\n",
     "clf = grid_obj.best_estimator_\n",
     "\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
     "print \"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train, y_train))\n",
-    "print \"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf, X_test, y_test))"
+    "print \"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf, X_test, y_test))\n",
+    "print clf"
    ]
   },
   {
@@ -635,7 +694,7 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "- The final model's F1 score for training and testing is 0.8150 and 0.7662 respectively. Compared to the untuned model, the tuned model actually came out worse as the untuned model had a testing score of 0.7838."
+    "- The final model's F1 score for training and testing is 0.8976 and 0.7552 respectively. Compared to the untuned model, the tuned model actually came out worse as the untuned model had a testing score of 0.7838."
    ]
   },
   {
